<resources>
    <string name="app_name">Alchi DOC</string>
    <string name="noData">해당 시간의 데이터가 수집되었을 시 평가 기록이 나타납니다.</string>
    <string name="StringValue">이미지가 열리지 않습니다.</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="log_in">로그인하기</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="sex">성별</string>
    <string name="day">일간</string>
    <string name="week">주간</string>
    <string name="month">월간</string>
    <string name="login1">로그인</string>
    <string name="login2">아직 회원이 아니신가요?</string>
    <string name="login3">회원가입 하기</string>
    <string name="login4">ex. AlchiDoc@gmail.com</string>
    <string name="login5">비밀번호를 잊어버리셨나요?</string>
    <string name="login6">비밀번호 재설정</string>
    <string name="login7">자동 로그인</string>
    <string name="login8">이메일 또는 비밀번호가 잘못 되었습니다.</string>
    <string name="password_find1">비밀번호 재설정</string>
    <string name="password_find2">AlchiDOC에 가입된 이메일을 입력해 주세요.\n
    입력된 이메일로 인증번호를 전송해 드립니다.</string>
    <string name="password_find3">전송하기</string>
    <string name="password_find4">인증요청</string>
    <string name="password_find5">인증번호</string>
    <string name="password_find6">6자리 숫자를 입력하세요.</string>
    <string name="password_find7">확인하기</string>
    <string name="password_find8">이메일 인증이 완료되었습니다.</string>
    <string name="password_find9">새 비밀번호</string>
    <string name="password_find10">새롭게 설정할 비밀번호를 입력해 주세요.</string>
    <string name="password_find11">비밀번호 확인</string>
    <string name="password_find12">비밀번호를 한 번 더 입력해 주세요.</string>
    <string name="password_find13">변경하기</string>
    <string name="password_find14">입력하신 이메일로 인증번호를 발송하였습니다.\n5분 안으로 입력해주세요.</string>
    <string name="password_find15">비밀번호가 재설정 되었습니다.</string>
    <string name="password_find16">인증에 실패했습니다.\n인증요청을 다시 해주세요.</string>
    <string name="password_find17">연결이 불안정합니다.</string>
    <string name="password_change">※ 비밀번호를 변경하실 분만 아래 내용을 입력해 주세요.</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="modify">수정하기</string>
    <string name="sign_up1">회원가입</string>
    <string name="sign_up2">이름</string>
    <string name="sign_up3">생년월일</string>
    <string name="sign_up4">이미 계정이 존재하나요?</string>
    <string name="sign_up5">회원가입하기</string>
    <string name="sign_up6">ex. 19950809</string>
    <string name="sign_up7">AlchiDOC 서비스를 이용하시려면 \n약관 동의가 필요합니다.</string>
    <string name="sign_up8">이용약관 및 개인정보 취급방침 동의</string>
    <string name="sign_up9">다음으로</string>
    <string name="sign_up10">전화번호</string>
    <string name="sign_up11">회원가입이 완료되었습니다.</string>
    <string name="sign_up12">이미 존재하는 이메일입니다. 다른 이메일을 작성해 주세요.</string>
    <string name="sign_up13">연결이 불안정합니다.</string>
    <string name="sign_up_wrong1">이름을 입력해 주세요.</string>
    <string name="sign_up_wrong2">생일을 입력해 주세요.</string>
    <string name="sign_up_wrong3">전화번호를 입력해 주세요.</string>
    <string name="sign_up_wrong4">이메일을 입력해 주세요.</string>
    <string name="sign_up_wrong5">비밀번호를 입력해 주세요.</string>
    <string name="sign_up_wrong6">비밀번호 확인을 입력해 주세요.</string>
    <string name="sign_up_wrong7">성별을 선택해 주세요.</string>
    <string name="sign_up_wrong8">비밀번호가 일치하지 않습니다.</string>
    <string name="fragHome1">조도량 부족</string>
    <string name="fragHome2">조도량 충분</string>
    <string name="fragHome3">활동량 부족</string>
    <string name="fragHome4">활동량 충분</string>
    <string name="fragHome5">수면량 부족</string>
    <string name="fragHome6">수면량 충분</string>
    <string name="fragHome7">원하는 작업을 선택해 주세요.</string>
    <string name="fragHome8">취침시간 설정</string>
    <string name="fragHome9">취침모드 시작</string>
    <string name="mainActivity1">블루투스를 지원하지 않는 기기입니다.</string>
    <string name="mainActivity2">블루투스가 활성화 되어 있지 않습니다. AlchiDOC 서비스를 이용하기 위해서는 블루투스를 켜주세요.</string>
    <string name="samplePagerAdapter1">현재 저장된 위치가 없습니다</string>
    <string name="samplePagerAdapter2">지도 탭을 눌러 현 위치를 확인하세요</string>
    <string name="samplePagerAdapter3">위치 공유가 허용되지 않았습니다</string>
    <string name="sleepTime1">새벽은 취침시간으로 설정되지 않습니다.</string>
    <string name="sleepTime2">현재보다 이른 시간은 설정되지 않습니다.</string>
    <string name="sleepTime3">취침시간이 설정되었습니다. </string>
    <string name="careList1">추가</string>
    <string name="careList2">친구가 추가되었습니다.</string>
    <string name="careList3">해당 아이디를 가진 사용자가 없습니다.</string>
    <string name="careList4">삭제 되었습니다.</string>
    <string name="careList5">취소</string>
    <string name="deviceSet1">기기와 연결을 끊으시겠습니까?</string>
    <string name="deviceSet2">예</string>
    <string name="deviceSet3">기기를 초기화 하시겠습니까?</string>
    <string name="deviceSet4">초기화 중입니다. 잠시만 기다려주세요.</string>
    <string name="deviceSet5">초기화가 완료되었습니다.</string>
    <string name="deviceSet6">초기화를 실패했습니다.</string>
    <string name="deviceSet7">아니오</string>
    <string name="deviceSet8">검색된 기기가 없습니다.</string>
    <string name="deviceSet9">기기 연결 실패</string>
    <string name="profile1">비밀번호가 일치하지 않습니다.</string>
    <string name="profile2">회원정보가 수정되었습니다.</string>
    <string name="act">활동량</string>
    <string name="act2">주간 활동량</string>
    <string name="act3">야간 활동량</string>
    <string name="act6">저녁 활동량</string>
    <string name="act4">활동량 인지행동 플랜</string>
    <string name="act5">오늘의 활동량 기록</string>
    <string name="light">조도량</string>
    <string name="light2">주간 조도량</string>
    <string name="light3">야간 조도량</string>
    <string name="sleep">수면량</string>
    <string name="sleep2">총 수면 시간</string>
    <string name="sleep3">평균 뒤척임</string>
    <string name="good">충분</string>
    <string name="bad">부족</string>
    <string name="exceed">과다</string>
    <string name="all_report1">인지행동 종합플랜</string>
    <string name="all_report2">세부사항별 인지행동 종합플랜</string>
    <string name="care_list1">보호자 목록</string>
    <string name="care_list2">나를 케어하는 사람</string>
    <string name="care_list3">내가 케어하는 사람</string>
    <string name="care_list4">+  추가하기</string>
    <string name="device1">기기 설정</string>
    <string name="device2">연결된 디바이스</string>
    <string name="device3">연결 끊기</string>
    <string name="device4">기기를 검색하는 중입니다.</string>
    <string name="device5">검색중\n...</string>
    <string name="device6">휴대폰과 기기의 거리를 가깝게 유지하세요.</string>
    <string name="device7">기기를 연결하는 중입니다.</string>
    <string name="sleep_ing1">현재 취침 상태입니다.</string>
    <string name="sleep_ing2">8시간이 지나면 자동으로 종료됩니다.</string>
    <string name="sleep_ing3">취침 종료</string>
    <string name="daylight1">오늘의 조도량 기록</string>
    <string name="daylight2">저녁 조도량/색온도</string>
    <string name="daylight3">야간 조도량/색온도</string>
    <string name="daylight4">주간 조도량/색온도</string>
    <string name="daylight5">조도량 인지행동 플랜</string>
    <string name="daylight6">아침 조도량</string>
    <string name="daylight7">저녁 조도량</string>
    <string name="daylight8">야간 조도량</string>
    <string name="lux">Lux</string>
    <string name="k">K</string>
    <string name="dayLightComment1">수면을 위한 주간 조도량이 충분한 상태입니다. 현재의 조도량을 유지하세요.</string>
    <string name="dayLightComment2">수면을 위한 주간 조도량이 부족한 상태입니다. 오늘 밤 숙면을 위해 앞으로 30분간 야외로 나가 햇빛을 쐬도록 권장합니다. 햇볕을 충분히 받으면 세라토닌이 생성되고, 이 호르몬이 멜라토닌 분비를 촉진하여 숙면을 유도하게 됩니다.</string>
    <string name="dayLightComment3">저녁 조도량이 과다한 상태입니다. 오늘 밤 숙면을 위해서는 조도량을 반드시 줄이고 색온도가 낮은 조명을 사용하길 권장합니다.</string>
    <string name="dayLightComment4">수면을 위한 저녁 조도량이 충분한 상태입니다. 현재의 조도량을 유지하세요.</string>
    <string name="dayLightComment5">수면에 방해되는 밝은 곳에 노출되어 있습니다. 수면을 위해 어둡고 색온도가 낮은 조명 환경을 조성하시고 취침 전까지 유지할 수 있도록 권장합니다.</string>
    <string name="dayLightComment6">수면을 위한 야간 조도량이 충분한 상태입니다. 현재의 조도량을 취침 전까지 유지하도록 하세요.</string>
    <string name="weekLightComment1">이번 주 평균 주간 조도량은 충분하였습니다. 다음 주에도 이번 주와 비슷한 조도량을 유지하도록 합니다.</string>
    <string name="weekLightComment2">이번 주 평균 주간 조도량은 대체로 부족한 편입니다. 다음 주에는 이번 주보다 더 많은 조도량을 쐴 수 있도록 권장합니다.</string>
    <string name="weekLightComment3">이번 주 평균 야간 조도량은 과다 상태입니다. 취침 전 과다한 조도량은 수면을 방해하는 원인이 될 수 있으므로 다음 주에는 조도량을 반드시 줄이도록 권장합니다.</string>
    <string name="weekLightComment4">이번 주 평균 야간 조도량은 충분하였습니다. 다음 주에도 이번 주와 비슷한 조도량을 취침 전에 유지할 수 있도록 합니다.</string>
    <string name="monthLightComment1">이번 달 평균 주간 조도량은 충분하였습니다. 다음 달에도 이번 달과 비슷한 조도량을 유지하도록 합니다.</string>
    <string name="monthLightComment2">이번 달 평균 주간 조도량은 대체로 부족한 편입니다. 다음 달에는 이번 달보다 더 많은 조도량을 쐴 수 있도록 권장합니다.</string>
    <string name="monthLightComment3">이번 달 평균 야간 조도량은 과다 상태입니다. 취침 전 과다한 조도량은 수면을 방해하는 원인이 될 수 있으므로 다음 달에는 조도량을 반드시 줄이도록 권장합니다.</string>
    <string name="monthLightComment4">이번 달 평균 야간 조도량은 충분하였습니다. 다음 달에도 이번 달과 비슷한 조도량을 취침 전에 유지하도록 합니다.</string>
    <string name="dayActComment1">수면을 위한 주간 활동량이 충분한 상태입니다. 오후에는 활동량을 줄이도록 권장하며, 과격한 운동은 삼가해 주시길 바랍니다.</string>
    <string name="dayActComment2">수면을 위한 주간 활동량이 부족한 상태입니다. 오후에는 더 많은 활동을 권장합니다. 수분을 보충하시고 활동량을 늘리도록 하세요.</string>
    <string name="dayActComment3">수면을 위한 저녁 활동량이 과다한 상태입니다. 오늘 밤 숙면을 위해서 남은 시간 동안에는 활동을 자제하고 수분을 충분히 보충하십시오.</string>
    <string name="dayActComment4">수면을 위한 저녁 활동량이 충분한 상태입니다. 남은 하루동안 현재와 같은 활동량을 유지하고, 활동량이 과다 상태가 되지 않도록 주의하세요.</string>
    <string name="dayActComment5">현재의 야간 활동량은 숙면에 좋지 않은 과다한 상태입니다. 수면에 방해가 되는 과격한 운동은 삼가해 주시고 야간 활동량을 반드시 줄여야 오늘 밤 숙면을 취하는 데에 도움이 됩니다.</string>
    <string name="dayActComment6">현재의 야간 활동량은 충분한 상태입니다. 취침 전까지 현재와 같은 활동량을 유지하고, 활동량이 과다 상태가 되지 않도록 주의하세요.</string>
    <string name="weekActComment1">이번 주 평균 주간 활동량은 충분하였습니다. 다음 주에도 이번 주와 비슷한 활동량을 유지하도록 합니다.</string>
    <string name="weekActComment2">이번 주 평균 주간 활동량은 대체로 부족한 편입니다. 다음 주에는 이번 주보다 더 많은 활동을 권장합니다.</string>
    <string name="weekActComment3">이번 주 평균 야간 활동량은 과다 상태입니다. 취침 전 과다한 활동량은 수면 장애의 원인이 될 수 있으므로 다음 주에는 활동량을 반드시 줄이도록 권장합니다.</string>
    <string name="weekActComment4">이번 주 평균 야간 활동량은 충분하였습니다. 다음 주에도 이번 주와 비슷한 활동량을 취침 전에 유지할 수 있도록 합니다.</string>
    <string name="monthActComment1">이번 달 평균 주간 활동량은 충분하였습니다. 다음 달에도 이번 달과 비슷한 활동량을 유지하도록 합니다.</string>
    <string name="monthActComment2">이번 달 평균 주간 활동량은 대체로 부족한 편입니다. 다음 달에는 이번 달보다 더 많은 활동을 권장합니다.</string>
    <string name="monthActComment3">이번 달 평균 야간 활동량은 과다 상태입니다. 취침 전 과다한 활동량은 수면을 방해하는 원인이 될 수 있으므로 다음 달에는 활동량을 반드시 줄이도록 권장합니다.</string>
    <string name="monthActComment4">이번 달 평균 야간 활동량은 충분하였습니다. 다음 달에도 이번 달과 비슷한 활동량을 취침 전에 유지하도록 합니다.</string>
    <string name="daySleepComment1">총 수면 시간은 충분하였으나, 총 수면 시간 대비 깊은 잠의 비율이 부족한 상태입니다. 수면 시간은 지금과 같이 유지하도록 하며, 내일은 더 깊은 잠을 잘 수 있도록 일간 조도량, 일간 활동량 플랜에 따라 행동하기를 권장합니다.</string>
    <string name="daySleepComment2">총 수면 시간 및 깊은 잠의 비율 모두 충분합니다. 내일도 높은 수면질을 위해 수면 시간 및 조도량, 활동량을 지금과 같이 유지하도록 하세요.</string>
    <string name="daySleepComment3">총 수면 시간이 부족하며, 총 수면 시간 대비 깊은 잠의 비율 또한 부족한 상태입니다. 수면 관리가 반드시 필요한 상태이며 이와 같은 현상이 지속될 경우 다른 질병을 초래할 수 있으므로 조도량, 활동량 플랜에 따라 행동할 수 있도록 권장합니다.</string>
    <string name="daySleepComment4">총 수면 시간 대비 깊은 잠의 비율은 충분하나, 총 수면 시간이 부족한 상태입니다. 깊은 잠의 비율이 낮아지지 않도록 수면 관리에 더욱 신경 써 주세요.</string>
    <string name="daySleepComment5">수면 시간당 평균 뒤척임이 정상입니다. 평균 뒤척임의 횟수가 많아지지 않도록 수면 시간 및 조도량, 활동량을 지금과 같이 내일도 유지하도록 하세요.</string>
    <string name="daySleepComment6">수면 시간당 평균 뒤척임이 정상 범위를 벗어난 수치입니다. 관리가 반드시 필요한 상태는 아니지만, 현재 상태에서 뒤척임 횟수가 더 늘어날 경우 수면 이상 증세로 악화될 수 있으므로 내일은 더욱 주의하시길 바랍니다.</string>
    <string name="daySleepComment7">수면 시간당 평균 뒤척임이 주의 범위를 넘어 관리가 반드시 필요한 상태입니다. 일주일 내에 4회 이상 같은 현상이 발생하면 수면 이상 증세로 악화될 수 있으므로 내일부터는 수면 행동 플랜을 적극적으로 따라해 주시길 바랍니다.</string>
    <string name="weekSleepComment1">이번 주 평균 수면 시간은 충분하였으나, 총 수면 시간 대비 깊은 잠의 비율이 부족한 상태입니다. 수면 시간은 이번 주와 비슷하게 유지하도록 하며, 다음 주에는 더 깊은 잠을 잘 수 있도록 조도량, 활동량 플랜에 맞게 행동해 주시기를 권장합니다.</string>
    <string name="weekSleepComment2">이번 주 평균 수면 시간 및 깊은 잠의 비율 모두 충분합니다. 다음 주에도 높은 수면질을 위해 수면 시간 및 조도량, 활동량을 이번 주와 비슷하게 유지하도록 하세요.</string>
    <string name="weekSleepComment3">이번 주 평균 수면 시간이 부족하며, 총 수면 시간 대비 깊은 잠의 평균 비율 또한 부족한 상태입니다. 수면 관리가 반드시 필요한 상태이며 이번 주와 같은 현상이 계속 발생할 경우 다른 질병을 초래할 수 있으므로 다음 주에는 조도량, 활동량 플랜에 따라 행동할 수 있도록 권장합니다.</string>
    <string name="weekSleepComment4">이번 주 평균 수면 시간 대비 깊은 잠의 평균 비율은 충분하나, 평균 수면 시간이 부족한 상태입니다. 다음 주에는 깊은 잠의 비율이 낮아지지 않도록 수면 관리에 더욱 신경 써 주세요.</string>
    <string name="weekSleepComment5">이번 주 수면 시간당 평균 뒤척임이 정상입니다. 평균 뒤척임의 횟수가 많아지지 않도록 수면 시간 및 조도량, 활동량을 이번 주와 같이 다음 주도 유지하도록 하세요.</string>
</resources>