<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3">
    <ImageView
        android:contentDescription="@string/StringValue"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/forgot"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nanumregular"
        android:gravity="center"
        android:text="@string/password_find1"
        android:textColor="#656565"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/nanumlight"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/password_find8"
        android:textColor="#373737"
        android:textSize="18sp" />
    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nanumregular"
        android:gravity="left"
        android:text="@string/password_find9"
        android:textColor="#646464"
        android:textSize="18sp" />
    <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/firstText"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumlight"
            android:hint="@string/password_find10"
            android:importantForAutofill="no"
            android:lineHeight="15dp"
            android:textColorHint="#646464"
            android:textSize="16sp" />
    </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/nanumregular"
        android:gravity="left"
        android:text="@string/password_find11"
        android:textColor="#646464"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/secondText"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumlight"
            android:hint="@string/password_find12"
            android:importantForAutofill="no"
            android:lineHeight="15dp"
            android:textColorHint="#646464"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/setImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp" />
    </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_grad"
            android:fontFamily="@font/nanumextra"
            android:text="@string/password_find13"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:onClick="signUp"></Button>
    </LinearLayout>
</LinearLayout>