<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp"
    android:weightSum="100" >

    <LinearLayout


        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="13">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
            android:layout_marginTop="17dp"
        android:fontFamily="@font/nanumregular"
        android:text="@string/sign_up1"
        android:textColor="#646464"
        android:textSize="30sp"></TextView>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="50">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:fontFamily="@font/nanumlight"
                android:gravity="left"
                android:text="@string/sign_up2"
                android:textColor="#646464"
                android:textSize="16sp"> </TextView>
            <EditText
                android:textColor="#000000"
                android:fontFamily="@font/nanumlight"
                android:id="@+id/name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textSize="16sp"> </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="50">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nanumlight"
                android:gravity="left"
                android:text="@string/sex"
                android:textColor="#646464"
                android:textSize="16sp"> </TextView>

            <LinearLayout android:layout_width="match_parent"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="vertical">
                <RadioGroup android:id="@+id/radioGroup"
                    android:orientation="horizontal"
                    android:layout_height="25dp"
                    android:layout_width="match_parent">
                    <RadioButton android:layout_weight="5"
                        android:fontFamily="@font/nanumlight"
                        android:text="@string/man"
                        android:id="@+id/rg_btn1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton android:layout_weight="5"
                        android:fontFamily="@font/nanumlight"
                        android:text="@string/woman"
                        android:id="@+id/rg_btn2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="11">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nanumlight"
            android:gravity="left"
            android:text="@string/sign_up3"
            android:textColor="#646464"
            android:textSize="16sp"> </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <EditText
            android:textColor="#000000"
            android:defaultFocusHighlightEnabled="false"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:textColorHint="#646464"
            android:fontFamily="@font/nanumlight"
            android:hint="오른쪽 달력 아이콘을 통해 선택하세요."
            android:textSize="16sp"> </EditText>
        </LinearLayout>
            <LinearLayout
                android:layout_weight="8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
        <ImageView
            android:onClick="OnClickHandler"
            android:id="@+id/birth_pick"
            android:tint="#646464"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_event_note_black_24dp"
            ></ImageView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="11">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nanumlight"
            android:gravity="left"
            android:text="전화번호"
            android:textColor="#646464"
            android:textSize="16sp"> </TextView>
        <EditText
            android:textColor="#000000"
            android:maxLength="11"
            android:inputType="phone"
            android:digits="0123456789"
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColorHint="#646464"
            android:fontFamily="@font/nanumlight"
            android:hint="'-'을 제외한 전화번호를 입력하세요."
            android:textSize="16sp"> </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="11">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nanumlight"
            android:gravity="left"
            android:text="@string/email"
            android:textColor="#646464"
            android:textSize="16sp"> </TextView>
        <EditText
            android:textColor="#000000"
            android:textColorHint="#646464"
            android:fontFamily="@font/nanumlight"
            android:id="@+id/email"
            android:inputType="textWebEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:hint="@string/login4"
            android:textSize="16sp"> </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="11">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nanumlight"
            android:gravity="left"
            android:text="@string/password"
            android:textColor="#646464"
            android:textSize="16sp"> </TextView>
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="16sp"> </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="vertical"
        android:layout_weight="11">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/nanumlight"
            android:gravity="left"
            android:text="비밀번호 확인"
            android:textColor="#646464"
            android:textSize="16sp"> </TextView>
        <EditText
            android:id="@+id/checkPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textSize="16sp"> </EditText>
    </LinearLayout>


    <LinearLayout
        android:weightSum="10"
       android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="4">

        <TextView
            android:gravity="center"
            android:layout_weight="9.7"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/nanumregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="이용약관 및 개인정보 취급방침 보기"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            android:onClick="goTerms"></TextView>
    </LinearLayout>


    <!-- 패스워드 / 싸인업-->
    <LinearLayout
        android:weightSum="10"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:orientation="horizontal"
        android:layout_weight="4">


        <TextView
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/nanumregular"
            android:textSize="14sp"
            android:layout_weight="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sign_up4"
            ></TextView>

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/nanumregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="left"
            android:text="@string/log_in"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            android:onClick="goLogin"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="12">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_grad"
            android:fontFamily="@font/nanumextra"
            android:text="@string/sign_up5"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:onClick="signUp"></Button>
    </LinearLayout>

</LinearLayout>